invisible text fix

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -32,39 +32,49 @@
     opacity: 75%;
     display: flex;
     text-transform: capitalize;
+    color: white;
 }
 
 .footer-products-content {
+    text-transform: capitalize;
     display: flex;
     font-size: 11px;
     opacity: 75%;
+    color: white;
     
 }
 
 .footer-social-content {
+    text-transform: capitalize;
     font-size: 11px;
     opacity: 75%;
+    color: white;
 }
 
 .footer-social-content span {
     text-transform: capitalize;
     margin-left: 8px;
+    color: white;
 }
 
 .footer-social-content a {
+    text-transform: capitalize;
     display: flex;
     align-items: center;
+    color: white;
 }
 
 a {
-    text-decoration: none;
+    
     color: inherit;
     padding: 9px 0;
+    color: white;
     
 }
 
 p {
     margin-bottom: 24px;
+    color: white;
 }
 
 img {
